[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ] }
async-trait = "0.1.52"
unveil-service-testing = "0.1"
